<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MemoryLoss</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Choose Location</string>
    <string name="icon_that_represents_device_type">Icon that represents device type</string>
    <string name="place_filler">Place filler Place filler Place filler Place filler Place filler Place filler</string>
    <string name="location_explanation_header">Location Explanation</string>
    <string name="location_explanation_details">Details</string>
    <string name="total_size">Total Size</string>
    <string name="file_system">Last Used</string>
    <string name="service_name">MemoryLoss launch scanner</string>
    <string name="launch">Launch</string>
    <string name="playstore">PlayStore</string>
    <string name="uninstall">Uninstall</string>
    <string name="uninstall_help">Clean up and free up!</string>
    <string name="playstore_help">Forgot what this app does? Look it up in the PlayStore</string>
    <string name="launch_help">Launch this app</string>
    <string name="select_the_apps_you_use_regularly">Select the Apps you use regularly</string>
    <string name="first_start_help">To get the learning algorithm of to a good start, select the apps you use most often. You don\'t have to be precise MemoryLoss will learn and fill in the rest. \n        \n        You can skip this step if you don\'t know what it means</string>

</resources>
