<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/button_bar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="gone"
    android:focusable="false"
    android:orientation="vertical" >

    <com.vicinitysoftware.android.memoryloss.TextViewButton
        android:id="@+id/button_launch"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:textAlignment="gravity"
        android:gravity="center"
        android:layout_marginBottom="5dp"
        android:background="@android:color/holo_blue_dark"
        android:clickable="true"
        android:text="@string/launch_help"
        android:textAppearance="@style/textButtonBar" />

    <com.vicinitysoftware.android.memoryloss.TextViewButton
        android:id="@+id/button_playstore"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:background="@android:color/holo_blue_dark"
        android:clickable="true"
        android:textAlignment="gravity"
        android:gravity="center"
        android:layout_marginBottom="5dp"
        android:text="@string/playstore_help"
        android:textAppearance="@style/textButtonBar" />

    <com.vicinitysoftware.android.memoryloss.TextViewButton
        android:id="@+id/button_uninstall"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:background="@android:color/holo_red_dark"
        android:clickable="true"
        android:textAlignment="gravity"
        android:gravity="center"
        android:layout_marginBottom="5dp"
        android:text="@string/uninstall_help"
        android:textAppearance="@style/textButtonBar" />

</LinearLayout>
